src/test/deca/context/invalid/int_objet_conflict.deca
// Description :
// new sur (int), donc problème car int pas une class
//
// Resultats :
// echec
{
    int but;
    but = new int();
}
